--- a/css/custom.css
+++ b/css/custom.css
@@ -334,7 +334,7 @@ section.newsletter-container .newsletter-description {
 }
 
 .product-page .mclaren-page-header-container::before {
-    background-image: url(../images/mclaren/All_car.webp);
+    background-image: url(../images/mcLaren/All_car.webp);
 }
 
 .product-page .product-page-header-container .page-header {
